--- a/flask_app/templates/dashboard.html
+++ b/flask_app/templates/dashboard.html
@@ -50,7 +50,7 @@
             </div>
             <p></p>
             <div>
-                <h3>Player Goals : </h3>
+                <h3>Player Goals / Objectives : </h3>
                 <table class="table table-bordered border-primary">
                     <tr>
                         <th>Player Name:</th>
