--- a/flask_app/templates/one_position.html
+++ b/flask_app/templates/one_position.html
@@ -1,35 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='style.css') }}">
     <title>Positions Dashboard</title>
 </head>
+
 <body>
+    <header>
+        <h2 class="logo">Riff Soccer Academy</h2>
+        <nav class="navigation">
+            <a href="/dashboard">Home</a>
+            <a href="#">About</a>
+            <a href="#">Services</a>
+            <a href="#">Contact</a>
+            <a href="/logout">Logout</a>
+        </nav>
+    </header>
     <div class="container">
         <div class="d-flex justify-content-between">
-            <h1>Welcome {{session['name']}}</h1>
-            <div class="d-flex justify-content-between w-25">
-                <p><a href="/dashboard" class="btn btn-outline-primary">Home</a></p>
-                <p><a href="/logout" class="btn btn-outline-success" >Logout</a></p>
-            </div>
+            <h3>Welcome {{session['name']}}</h3>
         </div>
         <p></p>
         <div class="w-65">
-            <h2>{{one_position.position_name}}s</h2>
+            <h4>{{one_position.position_name}}s</h4>
             <table class="table table-bordered border-primary">
                 <tr>
                     <th>Player Name</th>
                     <th>Email</th>
                 </tr>
                 {% for position in one_position.user %}
-                    <tr>
-                        <td>{{position.first_name}} {{position.last_name}}</td>
-                        <td>{{position.email}}</td>
-                    </tr>
+                <tr>
+                    <td>{{position.first_name}} {{position.last_name}}</td>
+                    <td>{{position.email}}</td>
+                </tr>
                 {% endfor %}
             </table>
             <p></p>
@@ -38,4 +47,5 @@
 
     </div>
 </body>
+
 </html>
