--- a/flask_app/templates/positions_dashboard.html
+++ b/flask_app/templates/positions_dashboard.html
@@ -1,39 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='style.css') }}">
     <title>Positions Dashboard</title>
 </head>
+
 <body>
+    <header>
+        <h2 class="logo">Riff Soccer Academy</h2>
+        <nav class="navigation">
+            <a href="/dashboard">Home</a>
+            <a href="#">About</a>
+            <a href="#">Services</a>
+            <a href="#">Contact</a>
+            <a href="/logout">Logout</a>
+        </nav>
+    </header>
     <div class="container">
         <div class="d-flex justify-content-between">
-            <h1>Welcome {{session['name']}}</h1>
-            <div class="d-flex justify-content-between w-25">
-                <p><a href="/dashboard" class="btn btn-outline-primary">Home</a></p>
-                <p><a href="/logout" class="btn btn-outline-success" >Logout</a></p>
-            </div>
+            <h3>Welcome {{session['name']}}</h3>
         </div>
         <p></p>
         <div class="w-65">
             <table class="table table-bordered border-primary">
-                <h2> ALL POSITIONS</h2>
+                <h4> ALL POSITIONS</h4>
                 <tr>
                     <th>Position Name</th>
                     <th>ACTIONS</th>
                 </tr>
-                {% for one_position  in all_positions %}
-                    <tr>
-                        <td>{{one_position.position_name}}</td>
-                        <td>
-                            <a href="/one/position/{{one_position.id}}">View</a> |
-                            <a href="/edit/position/{{one_position.id}}">Edit</a>
-                            <a href="/delete/position/{{one_position.id}}">Delete</a>
-                        </td>
-                    </tr>
+                {% for one_position in all_positions %}
+                <tr>
+                    <td>{{one_position.position_name}}</td>
+                    <td>
+                        <a href="/one/position/{{one_position.id}}">View</a> |
+                        <a href="/edit/position/{{one_position.id}}">Edit</a>
+                        <a href="/delete/position/{{one_position.id}}">Delete</a>
+                    </td>
+                </tr>
                 {% endfor %}
             </table>
             <p></p>
@@ -49,11 +58,12 @@
                     <label class="form-lable" for="name">Add Position:</label>
                     <input type="text" name="position_name">
                     <p></p>
-                    <button class="btn btn-outline-success" >Add Position</button>
+                    <button class="btn btn-outline-success">Add Position</button>
                 </form>
-            </div> 
-    </div>
+            </div>
+        </div>
 
     </div>
 </body>
+
 </html>
