--- a/flask_app/templates/positions_dashboard.html
+++ b/flask_app/templates/positions_dashboard.html
@@ -58,7 +58,7 @@
                     <label class="form-lable" for="name">Add Position:</label>
                     <input type="text" name="position_name">
                     <p></p>
-                    <button class="btn btn-outline-success">Add Position</button>
+                    <button class="btn">Add Position</button>
                 </form>
             </div>
         </div>
