--- a/flask_app/templates/index.html
+++ b/flask_app/templates/index.html
@@ -7,10 +7,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='style.css') }}">
     <title>Add Entries</title>
 </head>
 
 <body>
+    <header>
+        <h2 class="logo">Welcome To Riff Soccer Academy</h2>
+        <nav class="navigation">
+            <a href="#">About</a>
+            <a href="#">Services</a>
+            <a href="#">Contact</a>
+        </nav>
+    </header>
     <div class="d-flex container w-75">
         <div class="bg-primary-subtle p-5 w-50">
             <h3 class="text-center">REGISTER</h3>
@@ -43,7 +52,7 @@
                 <label class="form-label" for="position">Position:</label>
                 <select name="position_id" class="form-control">
                     {% for one_position in all_positions %}
-                        <option value="{{one_position.id}}">{{one_position.position_name}}</option>
+                    <option value="{{one_position.id}}">{{one_position.position_name}}</option>
                     {% endfor %}
                 </select>
                 <p></p>
