--- a/flask_app/static/style.css
+++ b/flask_app/static/style.css
@@ -152,13 +152,13 @@ header {
     z-index: 1;
 } */
 
-.form-box h2 {
+/* .form-box h2 {
     font-size: 2em;
     color: #162938;
     text-align: center;
-}
+} */
 
-.input-box {
+/* .input-box {
     position: relative;
     width: 100%;
     height: 50px;
@@ -181,9 +181,9 @@ header {
 .input-box input:focus~label,
 .input-box input:valid~label {
     top: -5px;
-}
+} */
 
-.input-box input {
+/* .input-box input {
     width: 100%;
     height: 100%;
     background: transparent;
@@ -206,8 +206,8 @@ header {
 .remember-forgot {
     font-size: .9em;
     color: #162938;
-    font-weight: 500;
-    margin: -15px 0 15px;
+    font-weight: 500; */
+/* margin: -15px 0 15px;
     display: flex;
     justify-content: space-between;
 }
@@ -224,7 +224,7 @@ header {
 
 .remember-forgot a:hover {
     text-decoration: underline;
-}
+} */
 
 .btn {
     width: 150px;
