--- a/flask_app/templates/dashboard.html
+++ b/flask_app/templates/dashboard.html
@@ -57,6 +57,9 @@
             <div>
                 <a href="/positions">View All Positions</a>
             </div>
+            <div>
+                <a href="/player/goals">View Player Goals / Objectives :</a>
+            </div>
             <p></p>
         </div>
     </div>
